--- a/src/videojuego-javascript.html
+++ b/src/videojuego-javascript.html
@@ -33,7 +33,7 @@
             <ul class="lista">
                 <li class="titulo">OTROS:</li>
                 <li><a href="#" target="_blank">Tutorial sobre cómo se hizo</a></li>
-                <li><a href="#" target="_blank">Código fuente del juego</a></li>
+                <li><a href="https://github.com/marlandy/videojuego-js" target="_blank">Código fuente del juego</a></li>
             </ul>
         </div>
         <div class="derecha">
