URL del tutorial

--- a/src/videojuego-javascript.html
+++ b/src/videojuego-javascript.html
@@ -13,10 +13,10 @@
                 <img src="images/autentia.png" alt="Autentia"/>
             </a>
             <p>
-                <a href="#" target="_blank" class="negrita">Crear un videojuego con Javascript y HTML5</a>
+                <a href="http://www.adictosaltrabajo.com/tutoriales/tutoriales.php?pagina=VideojuegoHTML5Javascript" target="_blank" class="negrita">Crear un videojuego con HTML5 y Javascript</a>
             </p>
             <p>
-                Desarrollado por: <a href="http://www.adictosaltrabajo.com/usuarios/miguel-arlandy" target="_blank">Miguel Arlandy Rodríguez</a>
+                Creado por: <a href="http://www.adictosaltrabajo.com/usuarios/miguel-arlandy" target="_blank">Miguel Arlandy Rodríguez</a>
             </p>
             <ul class="lista">
                 <li class="titulo">CONTROLES:</li>
@@ -32,7 +32,7 @@
             </ul>
             <ul class="lista">
                 <li class="titulo">OTROS:</li>
-                <li><a href="#" target="_blank">Tutorial sobre cómo se hizo</a></li>
+                <li><a href="http://www.adictosaltrabajo.com/tutoriales/tutoriales.php?pagina=VideojuegoHTML5Javascript" target="_blank">Tutorial</a></li>
                 <li><a href="https://github.com/marlandy/videojuego-js" target="_blank">Código fuente del juego</a></li>
             </ul>
         </div>
@@ -41,7 +41,7 @@
             <ul id="puntuaciones"></ul>
         </div>
         <div class="juego">
-            <canvas id="canvas" class="juego" width="600" height="650">TU NAVEGADOR NO SOPORTA HTML5!</canvas>
+            <canvas id="canvas" width="600" height="650">TU NAVEGADOR NO SOPORTA HTML5!</canvas>
         </div>
 
     </div>
